@@ -4,6 +4,8 @@ New in master
 Features
 --------
 
+* Allowing to customize filename base appended to RSS_PATH
+  (Issue #3041)
 * Use basic ipynb template by default for slightly better appearance
   and behavior
 * Fixing behavior of RSS_PATH to do what the documentation
